--- a/css/default.css
+++ b/css/default.css
@@ -1,108 +1,633 @@
 /*------------------------------------*	INDEX
 \*------------------------------------*/
-/*------------------------------------*	RESET
+/*------------------------------------*	NORMALIZE
 \*------------------------------------*/
+/*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
+/* Document
+   ========================================================================== */
+/**
+ * 1. Correct the line height in all browsers.
+ * 2. Prevent adjustments of font size after orientation changes in
+ *    IE on Windows Phone and in iOS.
+ */
+* {
+  box-sizing: border-box; }
+
 html {
-  box-sizing: border-box;
+  line-height: 1.15;
+  /* 1 */
   -ms-text-size-adjust: 100%;
+  /* 2 */
   -webkit-text-size-adjust: 100%;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-tap-highlight-color: transparent; }
+  /* 2 */ }
 
-*, *:before, *:after {
-  box-sizing: inherit; }
-
+/* Sections
+   ========================================================================== */
+/**
+ * Remove the margin in all browsers (opinionated).
+ */
 body {
-  margin: 0;
-  font: 16px/1 sans-serif; }
+  margin: 0; }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-p,
-ul,
-ol,
-dl,
-dt,
-dd,
-blockquote,
-figure,
-button {
-  margin: 0;
-  padding: 0; }
-
-iframe {
-  border: 0; }
-
-main,
-li {
+/**
+ * Add the correct display in IE 9-.
+ */
+article,
+aside,
+footer,
+header,
+nav,
+section {
   display: block; }
 
-strong {
-  font-weight: bold; }
+/**
+ * Correct the font size and margin on `h1` elements within `section` and
+ * `article` contexts in Chrome, Firefox, and Safari.
+ */
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0; }
 
+/* Grouping content
+   ========================================================================== */
+/**
+ * Add the correct display in IE 9-.
+ * 1. Add the correct display in IE.
+ */
+figcaption,
+figure,
+main {
+  /* 1 */
+  display: block; }
+
+/**
+ * Add the correct margin in IE 8.
+ */
+figure {
+  margin: 1em 40px; }
+
+/**
+ * 1. Add the correct box sizing in Firefox.
+ * 2. Show the overflow in Edge and IE.
+ */
+hr {
+  height: 0;
+  /* 1 */
+  overflow: visible;
+  /* 2 */ }
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+pre {
+  font-family: monospace, monospace;
+  /* 1 */
+  font-size: 1em;
+  /* 2 */ }
+
+/* Text-level semantics
+   ========================================================================== */
+/**
+ * 1. Remove the gray background on active links in IE 10.
+ * 2. Remove gaps in links underline in iOS 8+ and Safari 8+.
+ */
+a {
+  background-color: transparent;
+  /* 1 */
+  -webkit-text-decoration-skip: objects;
+  /* 2 */ }
+
+/**
+ * 1. Remove the bottom border in Chrome 57- and Firefox 39-.
+ * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
+ */
+abbr[title] {
+  border-bottom: none;
+  /* 1 */
+  text-decoration: underline;
+  /* 2 */
+  text-decoration: underline dotted;
+  /* 2 */ }
+
+/**
+ * Prevent the duplicate application of `bolder` by the next rule in Safari 6.
+ */
+b,
+strong {
+  font-weight: inherit; }
+
+/**
+ * Add the correct font weight in Chrome, Edge, and Safari.
+ */
+b,
+strong {
+  font-weight: bolder; }
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+code,
+kbd,
+samp {
+  font-family: monospace, monospace;
+  /* 1 */
+  font-size: 1em;
+  /* 2 */ }
+
+/**
+ * Add the correct font style in Android 4.3-.
+ */
+dfn {
+  font-style: italic; }
+
+/**
+ * Add the correct background and color in IE 9-.
+ */
+mark {
+  background-color: #ff0;
+  color: #000; }
+
+/**
+ * Add the correct font size in all browsers.
+ */
+small {
+  font-size: 80%; }
+
+/**
+ * Prevent `sub` and `sup` elements from affecting the line height in
+ * all browsers.
+ */
+sub,
 sup {
-  position: relative;
-  top: -.5em;
-  font-size: 65%;
+  font-size: 75%;
   line-height: 0;
+  position: relative;
   vertical-align: baseline; }
 
-a,
-button {
-  color: inherit; }
+sub {
+  bottom: -0.25em; }
 
-a {
-  text-decoration: none; }
+sup {
+  top: -0.5em; }
 
-button {
-  border: 0;
-  font: inherit;
-  letter-spacing: inherit;
-  background: none;
-  cursor: pointer;
-  -webkit-font-smoothing: inherit; }
+/* Embedded content
+   ========================================================================== */
+/**
+ * Add the correct display in IE 9-.
+ */
+audio,
+video {
+  display: inline-block; }
 
-input {
-  border: 0 none; }
+/**
+ * Add the correct display in iOS 4-7.
+ */
+audio:not([controls]) {
+  display: none;
+  height: 0; }
 
-input,
-button {
-  -webkit-appearance: none; }
-
-form input:focus,
-form select:focus,
-form textarea:focus {
-  outline: 0;
-  box-shadow: none; }
-
-::-moz-focus-inner {
-  padding: 0;
-  border: 0; }
-
+/**
+ * Remove the border on images inside links in IE 10-.
+ */
 img {
-  border: 0;
+  border-style: none; }
+
+/**
+ * Hide the overflow in IE.
+ */
+svg:not(:root) {
+  overflow: hidden; }
+
+/* Forms
+   ========================================================================== */
+/**
+ * 1. Change the font styles in all browsers (opinionated).
+ * 2. Remove the margin in Firefox and Safari.
+ */
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: sans-serif;
+  /* 1 */
+  font-size: 100%;
+  /* 1 */
+  line-height: 1.15;
+  /* 1 */
+  margin: 0;
+  /* 2 */ }
+
+/**
+ * Show the overflow in IE.
+ * 1. Show the overflow in Edge.
+ */
+button,
+input {
+  /* 1 */
+  overflow: visible; }
+
+/**
+ * Remove the inheritance of text transform in Edge, Firefox, and IE.
+ * 1. Remove the inheritance of text transform in Firefox.
+ */
+button,
+select {
+  /* 1 */
+  text-transform: none; }
+
+/**
+ * 1. Prevent a WebKit bug where (2) destroys native `audio` and `video`
+ *    controls in Android 4.
+ * 2. Correct the inability to style clickable types in iOS and Safari.
+ */
+button,
+html [type="button"],
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button;
+  /* 2 */ }
+
+/**
+ * Remove the inner border and padding in Firefox.
+ */
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+  border-style: none;
+  padding: 0; }
+
+/**
+ * Restore the focus styles unset by the previous rule.
+ */
+button:-moz-focusring,
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
+  outline: 1px dotted ButtonText; }
+
+/**
+ * Correct the padding in Firefox.
+ */
+fieldset {
+  padding: 0.35em 0.75em 0.625em; }
+
+/**
+ * 1. Correct the text wrapping in Edge and IE.
+ * 2. Correct the color inheritance from `fieldset` elements in IE.
+ * 3. Remove the padding so developers are not caught out when they zero out
+ *    `fieldset` elements in all browsers.
+ */
+legend {
+  color: inherit;
+  /* 2 */
+  display: table;
+  /* 1 */
   max-width: 100%;
+  /* 1 */
+  padding: 0;
+  /* 3 */
+  white-space: normal;
+  /* 1 */ }
+
+/**
+ * 1. Add the correct display in IE 9-.
+ * 2. Add the correct vertical alignment in Chrome, Firefox, and Opera.
+ */
+progress {
+  display: inline-block;
+  /* 1 */
+  vertical-align: baseline;
+  /* 2 */ }
+
+/**
+ * Remove the default vertical scrollbar in IE.
+ */
+textarea {
+  overflow: auto; }
+
+/**
+ * 1. Add the correct box sizing in IE 10-.
+ * 2. Remove the padding in IE 10-.
+ */
+[type="checkbox"],
+[type="radio"] {
+  padding: 0;
+  /* 2 */ }
+
+/**
+ * Correct the cursor style of increment and decrement buttons in Chrome.
+ */
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
   height: auto; }
 
-input {
-  border-radius: 0; }
+/**
+ * 1. Correct the odd appearance in Chrome and Safari.
+ * 2. Correct the outline style in Safari.
+ */
+[type="search"] {
+  -webkit-appearance: textfield;
+  /* 1 */
+  outline-offset: -2px;
+  /* 2 */ }
 
-input[type="search"]::-webkit-search-decoration,
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-results-button,
-input[type="search"]::-webkit-search-results-decoration {
+/**
+ * Remove the inner padding and cancel buttons in Chrome and Safari on macOS.
+ */
+[type="search"]::-webkit-search-cancel-button,
+[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none; }
+
+/**
+ * 1. Correct the inability to style clickable types in iOS and Safari.
+ * 2. Change font properties to `inherit` in Safari.
+ */
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
+  /* 1 */
+  font: inherit;
+  /* 2 */ }
+
+/* Interactive
+   ========================================================================== */
+/*
+ * Add the correct display in IE 9-.
+ * 1. Add the correct display in Edge, IE, and Firefox.
+ */
+details,
+menu {
+  display: block; }
+
+/*
+ * Add the correct display in all browsers.
+ */
+summary {
+  display: list-item; }
+
+/* Scripting
+   ========================================================================== */
+/**
+ * Add the correct display in IE 9-.
+ */
+canvas {
+  display: inline-block; }
+
+/**
+ * Add the correct display in IE.
+ */
+template {
   display: none; }
+
+/* Hidden
+   ========================================================================== */
+/**
+ * Add the correct display in IE 10-.
+ */
+[hidden] {
+  display: none; }
+
+/* Outlines
+   ========================================================================== */
+section, div, article, h1, h2, h3, p, input, textarea {
+  outline: none; }
 
 /*------------------------------------*	VARIABLES
 \*------------------------------------*/
-/*------------------------------------*	HEADER / NAV
+/*------------------------------------*	STRUCTURE
+\*------------------------------------*/
+.colored-bg {
+  background: #FBF9FB; }
+
+/*------------------------------------*	TYPOGRAPHY
+\*------------------------------------*/
+body {
+  font-family: "Raleway", sans-serif;
+  line-height: 1.5;
+  color: #4A4A4A;
+  font-size: 18px; }
+
+h1, h2, h3, h4, h5, h5 {
+  font-family: "Roboto", sans-serif;
+  font-weight: normal;
+  color: #D87D78;
+  text-align: center; }
+
+h1 {
+  font-size: 37px;
+  margin-top: 1.3em; }
+
+h2 {
+  font-size: 30px; }
+
+h3 {
+  font-size: 25px; }
+
+p {
+  margin-bottom: 1.2em; }
+
+.larger {
+  font-size: 148%;
+  text-align: center; }
+
+a {
+  text-decoration: none;
+  color: #D87D78; }
+  a:hover {
+    text-decoration: underline; }
+
+@media (min-width: 46.25em) {
+  .drop-cap {
+    font-size: 5.25rem;
+    line-height: 4.25rem;
+    float: left;
+    display: inline-block;
+    height: 4.5rem;
+    padding-top: 0.0625rem;
+    margin-right: 0.25rem; }
+  .drop-cap__inner {
+    vertical-align: text-top; } }
+
+/*------------------------------------*	IMAGES
+\*------------------------------------*/
+img {
+  max-width: 100%; }
+
+.bordered {
+  background: #f5f5f5;
+  border: 1px solid #ccc;
+  padding: 10px 10px 10px 10px;
+  padding: 8px;
+  box-shadow: 0 0 4px -1px #666; }
+
+/*------------------------------------*	HEADER
 \*------------------------------------*/
 .header {
-  background: #D87D78; }
+  background-color: #D87D78;
+  text-align: center;
+  position: fixed;
+  z-index: 200;
+  width: 100%;
+  height: 180px; }
+  .header h1 {
+    color: #fff;
+    text-transform: lowercase;
+    text-align: center;
+    padding: 20px 0 20px 0;
+    margin: 0 auto;
+    background: url(../images/beth-oloughlin-auckland-marriage-celebrant.svg) no-repeat center center;
+    background-size: 23%;
+    text-indent: -9999px; }
+
+.header-secondary {
+  background-color: #1c1c1c;
+  border-top: 4px solid #fff;
+  padding: 12px 25px; }
+  .header-secondary .content-restrict {
+    display: flex; }
+  .header-secondary h3, .header-secondary .tel {
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 12px;
+    margin: 0;
+    line-height: 1;
+    font-weight: normal;
+    letter-spacing: 1px; }
+  .header-secondary .tel {
+    margin-left: auto;
+    background: url(../images/icon-phone.svg) no-repeat left center;
+    padding-left: 27px; }
+  .header-secondary a {
+    color: #fff;
+    text-decoration: none; }
+
+/*------------------------------------*	NAVIGATION
+\*------------------------------------*/
+.nav ul {
+  display: flex;
+  background: white;
+  justify-content: center;
+  padding: 10px 13px 0 0;
+  margin-top: 0; }
+  .nav ul li {
+    list-style-type: none; }
+    .nav ul li a {
+      display: block;
+      font-family: "Roboto", sans-serif;
+      border-right: 1px solid #ddd;
+      padding: .7em .9em;
+      font-size: 11px;
+      font-weight: bold;
+      text-transform: uppercase;
+      text-decoration: none;
+      letter-spacing: 1px;
+      color: inherit;
+      border-bottom: 4px solid #D87D78;
+      transition: all 0.2s; }
+      .nav ul li a:hover {
+        color: #D87D78;
+        transform: scale(1.06); }
+    .nav ul li:nth-child(2) a {
+      border-bottom: 4px solid #e3a3a0; }
+    .nav ul li:nth-child(3) a {
+      border-bottom: 4px solid #e9b6b3; }
+    .nav ul li:last-child a {
+      border-right: none; }
 
 /*------------------------------------*	FOOTER
 \*------------------------------------*/
+.footer {
+  padding: .1em 0;
+  background-color: #1c1c1c;
+  color: #b3b3b3;
+  color: white;
+  text-align: center; }
+  .footer small {
+    font-size: 13px; }
+
+/*------------------------------------*	FORMS
+\*------------------------------------*/
+input[type="text"],
+input[type="email"],
+input[type="telephone"] {
+  width: 300px;
+  padding: .3em;
+  border: 1px solid #ddd; }
+  input[type="text"]:after,
+  input[type="email"]:after,
+  input[type="telephone"]:after {
+    content: " ";
+    position: absolute;
+    height: 3px;
+    background: red; }
+
+label {
+  display: block; }
+
+textarea {
+  border: 1px solid #ddd;
+  padding: 15px;
+  max-width: 600px;
+  min-height: 250px; }
+
+.form_row {
+  margin-bottom: 1em;
+  position: relative; }
+  .form_row:after {
+    content: " ";
+    position: absolute;
+    height: 2px;
+    background: #D87D78;
+    width: 0%;
+    max-width: 300px;
+    left: 0;
+    bottom: 0;
+    transition: width .4s ease-out; }
+  .form_row.focussed:after {
+    content: " ";
+    position: absolute;
+    height: 2px;
+    background: #D87D78;
+    width: 100%;
+    max-width: 300px;
+    left: 0;
+    bottom: 0; }
+
+/*------------------------------------*	PAGES
+\*------------------------------------*/
+.intro {
+  padding-top: 188px;
+  position: relative;
+  z-index: 100; }
+  .intro h1 {
+    margin-top: 2.1em; }
+
+.profile_pic {
+  float: right;
+  max-width: 200px;
+  transform: rotate3d(20deg);
+  transform: rotate(8deg);
+  margin: 20px 0 20px 20px; }
+
+.services {
+  padding: 0 0 3em 0; }
+  .services h1 {
+    padding-top: 1.3em; }
+
+.reading-img {
+  width: 200px;
+  float: left;
+  margin: 0 25px 10px 0; }
+
+/*------------------------------------*	HELPERS
+\*------------------------------------*/
+.content-outer {
+  max-width: 1200px;
+  margin: 0 auto; }
+
+.content-inner {
+  max-width: 740px;
+  margin: 0 auto; }
