--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -2,4 +2,17 @@
 	VARIABLES
 \*------------------------------------*/
 
-$color-prim: #D87D78; 
+// Colors:
+$color-prim  : #D87D78;
+$color-header: #1c1c1c;
+$bg-gray     : #FBF9FB;
+
+
+
+// Fonts:
+$font-heading: 'Roboto', sans-serif;
+$font-body   : 'Raleway', sans-serif;
+
+
+$content-width-outer: 1200px;
+$content-width-inner: 740px;
