--- a/sass/default.scss
+++ b/sass/default.scss
@@ -5,5 +5,12 @@
 
 @import "_reset.scss";
 @import "_variables.scss";
+@import "_structure.scss";
+@import "_typography.scss";
+@import "_images.scss";
 @import "_header.scss";
+@import "_navigation.scss";
 @import "_footer.scss";
+@import "_forms.scss";
+@import "_pages.scss";
+@import "_helpers.scss";
