switch logo to PNG after SVG no good on windows

--- a/css/default.css
+++ b/css/default.css
@@ -478,8 +478,8 @@ img {
     text-align: center;
     padding: 20px 0 20px 0;
     margin: 0 auto;
-    background: url(../images/beth-oloughlin-auckland-marriage-celebrant.svg) no-repeat center center;
-    background-size: 23%;
+    background: url(../images/beth-oloughlin-auckland-marriage-celebrant.png) no-repeat center center;
+    background-size: 295px;
     text-indent: -9999px; }
 
 .header-secondary {
