--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -18,8 +18,9 @@
         text-align: center;
         padding: 20px 0 20px 0;
         margin: 0 auto;
-        background: url(../images/beth-oloughlin-auckland-marriage-celebrant.svg) no-repeat center center;
-        background-size: 23%;
+        //background: url(../images/beth-oloughlin-auckland-marriage-celebrant.svg) no-repeat center center;
+        background: url(../images/beth-oloughlin-auckland-marriage-celebrant.png) no-repeat center center;
+        background-size: 295px;
         text-indent: -9999px;
     }
 
