--- a/sass/_images.scss
+++ b/sass/_images.scss
@@ -14,3 +14,11 @@ img {
     padding: 8px;
     box-shadow: 0 0 4px -1px #666;
 }
+
+
+.hero-bottom {
+    background: url("../images/couple_b&w.jpg") no-repeat center;
+    background-size: cover;
+    min-height: 600px;
+    max-height: 600px;
+}
