--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -4,13 +4,16 @@
 
 
 .header {
-    background-color: $color-prim;
+    //background-color: white;
+    //background: linear-gradient(to bottom, rgb(112, 198, 33) 100%,rgba(255,255,255,0.5) 90%,rgba(255,255,255,0) 0%);
+    background-image: linear-gradient(to bottom, rgba(255,255,255, 1) 90%, rgba(255, 255, 255, 0));
     text-align: center;
     position: fixed;
     z-index: 200;
     width: 100%;
-    height: 180px;
-    //padding-bottom: 25px;
+    height: 230px;
+    padding-bottom: 25px;
+    //outline: 1px solid;
 
     h1 {
         color: #fff;
@@ -31,7 +34,12 @@
     //     margin: 5px 0 20px 0;
     //     text-align: right;
     // }
+
+    .header-top {
+        background-color: $color-prim;
+    }
 }
+
 
 
 // Dark Strip:
@@ -53,6 +61,13 @@
         line-height: 1;
         font-weight: normal;
         letter-spacing: 1px;
+        transform: translateY(1px);
+
+        span {
+            @media #{$smallmobile} {
+                display: none;  // 'Auckland is hidden to keep on 1 line on phone size;
+            }
+        }
     }
 
     .tel {
@@ -65,4 +80,6 @@
         color: #fff;
         text-decoration: none;
     }
+
+
 }
