--- a/sass/_helpers.scss
+++ b/sass/_helpers.scss
@@ -13,3 +13,10 @@
     max-width: $content-width-inner;
     margin: 0 auto;
 }
+
+hr {
+    background: url("../images/section-divider.png") no-repeat center;
+    height: 50px;
+    border: none;
+    margin: 70px 0 40px 0;
+}
