--- a/sass/_pages.scss
+++ b/sass/_pages.scss
@@ -33,7 +33,7 @@
     padding: 0 0 3em 0;
 
     h1 {
-        padding-top: 1.3em;
+        //padding-top: 1.3em;
     }
 }
 
@@ -41,4 +41,13 @@
     width: 200px;
     float: left;
     margin: 0 25px 10px 0;
+    transform: rotate(-2deg);
+}
+
+// CONTACT
+
+.contact {
+    h1 {
+        padding-top: 1.3em;
+    }
 }
