--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -21,7 +21,7 @@
                 font-family: $font-heading;
                 border-right: 1px solid #ddd;
                 padding: .7em .9em;
-                font-size: 13px;
+                font-size: 11.5px;
                 font-weight: bold;
                 text-transform: uppercase;
                 text-decoration: none;
@@ -45,6 +45,16 @@
 
             &:before {
                 content: "";
+            }
+        }
+    }
+
+    @media #{$desktop} {
+        ul {
+            li {
+                a {
+                    font-size: 13px;
+                }
             }
         }
     }
