--- a/sass/_structure.scss
+++ b/sass/_structure.scss
@@ -2,6 +2,21 @@
 	STRUCTURE
 \*------------------------------------*/
 
+.content-outer {
+    max-width: $content-width-outer;
+    margin: 0 auto;
+}
+
+.content-inner {
+    max-width: $content-width-inner;
+    margin: 0 auto;
+    padding: 0 20px;
+
+    @media #{$desktop} {
+        padding: 0 0;
+    }
+}
+
 .colored-bg {
     background: $bg-gray;
 }
