--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -21,6 +21,10 @@
         background: url(../images/beth-oloughlin-auckland-marriage-celebrant.png) no-repeat center center;
         background-size: 259px;
         text-indent: -9999px;
+
+        a {
+            display: block;
+        }
     }
 
     // h1 span {
