--- a/sass/_pages.scss
+++ b/sass/_pages.scss
@@ -60,3 +60,11 @@
         margin-top: 0;
     }
 }
+
+
+// THANK YOU PAGE
+
+.thank-you-content {
+    padding-top: 173px;
+    margin-bottom: 88px;
+}
