--- a/sass/_helpers.scss
+++ b/sass/_helpers.scss
@@ -16,6 +16,10 @@ hr {
     }
 }
 
+.removePaddingBot {
+    padding-bottom: 0!important;
+}
+
 // This is to prevent the <textarea> form disappearing on Android when clicked
 
 .pos-relative {
