--- a/sass/_forms.scss
+++ b/sass/_forms.scss
@@ -5,7 +5,7 @@
 
 input[type="text"],
 input[type="email"],
-input[type="telephone"] {
+input[type="tel"] {
     width: 300px;
     padding: .3em;
     border: 1px solid #ddd;
@@ -90,8 +90,4 @@ textarea {
         cursor: pointer;
     }
 
-    // padding: .5rem 1rem;
-    //font-size: 1.25rem;
-    // line-height: 1.5;
-    // border-radius: .3rem;
 }
