--- a/sass/_images.scss
+++ b/sass/_images.scss
@@ -15,10 +15,19 @@ img {
     box-shadow: 0 0 4px -1px #666;
 }
 
+.img-centered {
+    text-align: center;
+    margin: 0;
+}
+
 
 .hero-bottom {
     background: url("../images/couple_b&w.jpg") no-repeat center;
     background-size: cover;
     min-height: 600px;
     max-height: 600px;
+}
+
+.canz {
+    transform: translateY(25px);
 }
